--- a/class.html
+++ b/class.html
@@ -2,18 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+	<meta charset="UTF-8"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>::수업-펭귄서프클럽</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Yujin Hwang" />
 	<meta name="description" content="Study case for my portfolio" />
 	<meta name="Resource-type" content="Document" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<title>::수업-펭귄서프클럽</title>
 	<link rel="stylesheet" type="text/css" href="vendor/stylesheets/reset.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/css/header.css" />
 	<link rel="stylesheet" type="text/css" href="stylesheets/css/class.css" />
 	<link rel="stylesheet" type="text/css" href="stylesheets/css/footer.css" />
 	<link rel="stylesheet" type="text/css" href="lib/stylesheets/jquery.mCustomScrollbar.css">
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script type="text/javascript" src="lib/javascripts/jquery.mCustomScrollbar.concat.min.js"></script>
 </head>
 <body>
@@ -25,7 +27,7 @@
 				<li class="gnb-tab"><a href="rent.html"><span>대여</span></a></li>
 			</ul>
 			<div class="wave-tab"><a href="#"><span>속초 파도 LIVE</span>
-				<img src="images/common/dir.svg" alt="속초 파도 LIVE 보러가기">
+				<img src="images/common/dir.png" alt="속초 파도 LIVE 보러가기">
 			</a></div>
 		</nav>
 		<div class="nav-mobile"></div>
@@ -43,7 +45,7 @@
 			<img src="images/class/jumbotron.png" alt="대문이미지">
 		</div>
 		<div class="jumbotron-title">
-			<img src="images/common/icon-wave-white.svg" alt="아이콘">
+			<img src="images/common/icon-wave-white.png" alt="아이콘">
 			<p>서핑&패들보드&수상스키</p>
 		</div>
 	</section>
@@ -52,7 +54,7 @@
 			<div class="icon-warpper">
 				<div class="icon-tab">
 					<a href="#class-info-01" class="icon-tab__img">
-						<img class="tab-img__icon" src="images/common/icon-surf.svg" alt="서핑 아이콘">
+						<img class="tab-img__icon" src="images/common/icon-surf-action.png" alt="서핑 아이콘">
 						<img class="tab-img__icon-effect" src="images/common/icon-surf-effect.png" alt="서핑 아이콘 효과">
 					</a>
 					<span class="icon-tab__subtitle">파도를 이용해 즐기는 스포츠</span>
@@ -60,7 +62,7 @@
 				</div>
 				<div class="icon-tab">
 					<a href="#class-info-02" class="icon-tab__img">
-						<img class="tab-img__icon" src="images/common/icon-paddle.svg" alt="패들보드 아이콘">
+						<img class="tab-img__icon" src="images/common/icon-paddle-action.png" alt="패들보드 아이콘">
 						<img class="tab-img__icon-effect" src="images/common/icon-paddle-effect.png" alt="패들보드 아이콘 효과">
 					</a>
 					<span class="icon-tab__subtitle">물 위에서 노를 젓는 스포츠</span>
@@ -68,7 +70,7 @@
 				</div>
 				<div class="icon-tab">
 					<a href="#class-info-03" class="icon-tab__img">
-						<img class="tab-img__icon" src="images/common/icon-ski.svg" alt="수상스키 아이콘">
+						<img class="tab-img__icon" src="images/common/icon-ski-action.png" alt="수상스키 아이콘">
 						<img class="tab-img__icon-effect" src="images/common/icon-ski-effect.png" alt="수상스키아이콘 효과">
 					</a>
 					<span class="icon-tab__subtitle">속도를 즐기는 스포츠</span>
@@ -91,11 +93,11 @@
 						<div class="card-cont">
 							<div class="cont-count">78번째 후기</div>
 							<div class="cont-eval">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
 							</div>
 							<div class="cont-comment">
 								<p>강사님들 친절하고 재미있으세요! 엄청 즐거운 시간 보내다 왔네요</p>
@@ -109,11 +111,11 @@
 						<div class="card-cont">
 							<div class="cont-count">77번째 후기</div>
 							<div class="cont-eval">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
 							</div>
 							<div class="cont-comment">
 								<p>처음 배우는거라 걱정 많았는데 생각보다 쉬워요!</p>
@@ -127,11 +129,11 @@
 						<div class="card-cont">
 							<div class="cont-count">76번째 후기</div>
 							<div class="cont-eval">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-half.svg" alt="별 반개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-half.png" alt="별 반개">
 							</div>
 							<div class="cont-comment">
 								<p>수업도 재밌고 찍어주신 사진들도 완전 인생화보!!</p>
@@ -145,11 +147,11 @@
 						<div class="card-cont">
 							<div class="cont-count">75번째 후기</div>
 							<div class="cont-eval">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
 							</div>
 							<div class="cont-comment">
 								<p>내년 여름에도 다시 오려합니다. 기분좋은 곳</p>
@@ -217,11 +219,11 @@
 						<div class="card-cont">
 							<div class="cont-count">68번째 후기</div>
 							<div class="cont-eval">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
 							</div>
 							<div class="cont-comment">
 								<p>아이도 쉽게 배우고 즐겁게 놀았어요</p>
@@ -235,11 +237,11 @@
 						<div class="card-cont">
 							<div class="cont-count">67번째 후기</div>
 							<div class="cont-eval">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-empty.svg" alt="별 없음">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-empty.png" alt="별 없음">
 							</div>
 							<div class="cont-comment">
 								<p>보드는 무겁지만 정말 잊지 못할 추억 남겼네요</p>
@@ -253,11 +255,11 @@
 						<div class="card-cont">
 							<div class="cont-count">66번째 후기</div>
 							<div class="cont-eval">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
 							</div>
 							<div class="cont-comment">
 								<p>잔잔한 파도에 노를 저으면서 가는 기분이 최고였어요</p>
@@ -271,11 +273,11 @@
 						<div class="card-cont">
 							<div class="cont-count">65번째 후기</div>
 							<div class="cont-eval">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-half.svg" alt="별 반개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-half.png" alt="별 반개">
 							</div>
 							<div class="cont-comment">
 								<p>댕댕이랑도 같이 타도 될 정도로 평화로웠어요</p>
@@ -295,11 +297,11 @@
 						<div class="card-cont">
 							<div class="cont-count">78번째 후기</div>
 							<div class="cont-eval">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
 							</div>
 							<div class="cont-comment">
 								<p>강사님들 친절하고 재미있으세요! 엄청 즐거운 시간 보내다 왔네요</p>
@@ -313,11 +315,11 @@
 						<div class="card-cont">
 							<div class="cont-count">77번째 후기</div>
 							<div class="cont-eval">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
 							</div>
 							<div class="cont-comment">
 								<p>처음 배우는거라 걱정 많았는데 생각보다 쉬워요!</p>
@@ -331,11 +333,11 @@
 						<div class="card-cont">
 							<div class="cont-count">76번째 후기</div>
 							<div class="cont-eval">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-half.svg" alt="별 반개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-half.png" alt="별 반개">
 							</div>
 							<div class="cont-comment">
 								<p>수업도 재밌고 찍어주신 사진들도 완전 인생화보!!</p>
@@ -349,11 +351,11 @@
 						<div class="card-cont">
 							<div class="cont-count">75번째 후기</div>
 							<div class="cont-eval">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
-								<img src="images/common/icon-star-full.svg" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
+								<img src="images/common/icon-star-full.png" alt="별 한개">
 							</div>
 							<div class="cont-comment">
 								<p>내년 여름에도 다시 오려합니다. 기분좋은 곳</p>
@@ -395,22 +397,22 @@
 		<div class="cost-wrapper">
 			<div class="cost-tab">
 				<div class="cost-tab__icon">
-					<img class="cost-tab__icon-icon" src="images/common/icon-surf.svg" alt="서핑 아이콘" >
+					<img class="cost-tab__icon-icon" src="images/common/icon-surf-action.png" alt="서핑 아이콘" >
 					<img class="cost-tab__icon-effect" src="images/common/icon-surf-effect.png" alt="서핑 아이콘 효과">
 					<span class="cost-tab__icon-title">서핑 클래스</span>
 				</div>
 				<div class="cost-tab__option">
 					<div class="option hour">
-						<img class="option-icon" src="images/common/icon-plus.svg" alt="추가">
+						<img class="option-icon" src="images/common/icon-plus.png" alt="추가">
 						<input class="option-input" type="text" name="시간" placeholder="1">
 						<span class="option-unit">시간</span>
-						<img class="option-icon" src="images/common/icon-minus.svg" alt="빼기">
+						<img class="option-icon" src="images/common/icon-minus.png" alt="빼기">
 					</div>
 					<div class="option person">
-						<img class="option-icon" src="images/common/icon-plus.svg" alt="추가">
+						<img class="option-icon" src="images/common/icon-plus.png" alt="추가">
 						<input class="option-input" type="text" name="인원" placeholder="1">
 						<span class="option-unit">명</span>
-						<img class="option-icon" src="images/common/icon-minus.svg" alt="빼기">
+						<img class="option-icon" src="images/common/icon-minus.png" alt="빼기">
 					</div>
 				</div>
 				<div class="cost-tab__benefit">+보드 무료 대여<br>+타월 1인당 1개 제공<br>+스냅 할인</div>
@@ -421,22 +423,22 @@
 			</div>
 			<div class="cost-tab">
 				<div class="cost-tab__icon">
-					<img class="cost-tab__icon-icon" src="images/common/icon-paddle.svg" alt="패드보드 아이콘" >
+					<img class="cost-tab__icon-icon" src="images/common/icon-paddle-action.png" alt="패드보드 아이콘" >
 					<img class="cost-tab__icon-effect" src="images/common/icon-paddle-effect.png" alt="패들보드 아이콘 효과">
 					<span class="cost-tab__icon-title">패들보드 클래스</span>
 				</div>
 				<div class="cost-tab__option">
 					<div class="option hour">
-						<img class="option-icon" src="images/common/icon-plus.svg" alt="추가">
+						<img class="option-icon" src="images/common/icon-plus.png" alt="추가">
 						<input class="option-input" type="text" name="시간" placeholder="1">
 						<span class="option-unit">시간</span>
-						<img class="option-icon" src="images/common/icon-minus.svg" alt="빼기">
+						<img class="option-icon" src="images/common/icon-minus.png" alt="빼기">
 					</div>
 					<div class="option person">
-						<img class="option-icon" src="images/common/icon-plus.svg" alt="추가">
+						<img class="option-icon" src="images/common/icon-plus.png" alt="추가">
 						<input class="option-input" type="text" name="인원" placeholder="1">
 						<span class="option-unit">명</span>
-						<img class="option-icon" src="images/common/icon-minus.svg" alt="빼기">
+						<img class="option-icon" src="images/common/icon-minus.png" alt="빼기">
 					</div>
 				</div>
 				<div class="cost-tab__benefit">+장비 무료 대여<br>+타월 1인당 1개 제공<br>+스냅 할인</div>
@@ -447,22 +449,22 @@
 			</div>
 			<div class="cost-tab">
 				<div class="cost-tab__icon">
-					<img class="cost-tab__icon-icon" src="images/common/icon-ski.svg" alt="수상스키 아이콘" >
+					<img class="cost-tab__icon-icon" src="images/common/icon-ski-action.png" alt="수상스키 아이콘" >
 					<img class="cost-tab__icon-effect" src="images/common/icon-ski-effect.png" alt="수상스키 아이콘 효과">
 					<span class="cost-tab__icon-title">수상스키 클래스</span>
 				</div>
 				<div class="cost-tab__option">
 					<div class="option hour">
-						<img class="option-icon" src="images/common/icon-plus.svg" alt="추가">
+						<img class="option-icon" src="images/common/icon-plus.png" alt="추가">
 						<input class="option-input" type="text" name="시간" placeholder="1">
 						<span class="option-unit">시간</span>
-						<img class="option-icon" src="images/common/icon-minus.svg" alt="빼기">
+						<img class="option-icon" src="images/common/icon-minus.png" alt="빼기">
 					</div>
 					<div class="option person">
-						<img class="option-icon" src="images/common/icon-plus.svg" alt="추가">
+						<img class="option-icon" src="images/common/icon-plus.png" alt="추가">
 						<input class="option-input" type="text" name="인원" placeholder="1">
 						<span class="option-unit">명</span>
-						<img class="option-icon" src="images/common/icon-minus.svg" alt="빼기">
+						<img class="option-icon" src="images/common/icon-minus.png" alt="빼기">
 					</div>
 				</div>
 				<div class="cost-tab__benefit">+보드 무료 대여<br>+타월 1인당 1개 제공<br>+스냅 할인</div>
