--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+	<meta charset="UTF-8"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>::PenguinnSurfClub</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Yujin Hwang" />
 	<meta name="description" content="Study case for my portfolio" />
 	<meta name="Resource-type" content="Document" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<title>::PenguinnSurfClub</title>
 	<link rel="stylesheet" type="text/css" href="vendor/stylesheets/reset.css">
 	<link rel="stylesheet" type="text/css" href="lib/stylesheets/jquery.mCustomScrollbar.css" />
 	<link rel="stylesheet" type="text/css" href="stylesheets/css/header.css" />
 	<link rel="stylesheet" type="text/css" href="stylesheets/css/index.css" />
 	<link rel="stylesheet" type="text/css" href="stylesheets/css/footer.css" />
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script type="text/javascript" src="lib/javascripts/jquery.mCustomScrollbar.concat.min.js"></script>
 </head>
 <body>
@@ -25,7 +27,7 @@
 				<li class="gnb-tab"><a href="rent.html"><span>대여</span></a></li>
 			</ul>
 			<div class="wave-tab"><a href="#"><span>속초 파도 LIVE</span>
-				<img src="images/common/dir.svg" alt="속초 파도 LIVE 보러가기">
+				<img src="images/common/dir.png" alt="속초 파도 LIVE 보러가기">
 			</a></div>
 		</nav>
 		<div class="nav-mobile"></div>
@@ -91,12 +93,12 @@
 		</div>
 		<div class="visual-dir">
 			<div class="dir-btn prev">
-				<img src="images/common/dir.svg" alt="이전"/>
+				<img src="images/common/dir.png" alt="이전"/>
 				<span class="dir-btn__name">이전</span>
 			</div>
 			<div class="dir-line"></div>
 			<div class="dir-btn next">
-				<img src="images/common/dir.svg" alt="다음"/>
+				<img src="images/common/dir.png" alt="다음"/>
 				<span class="dir-btn__name">다음</span>
 			</div>
 		</div>
@@ -142,13 +144,13 @@
 					<div class="intro-image">
 						<img src="images/index/section2-way.jpg" alt="오시는 길" />
 					</div>
-					<a href="location.html" class="intro-tab"><img src="images/common/dir-dark.svg" alt="이동"><span>오시는 길</span></a>
+					<a href="location.html" class="intro-tab"><img src="images/common/dir-dark.png" alt="이동"><span>오시는 길</span></a>
 				</div>
 				<div class="location-intro right">
 					<div class="intro-image">
 						<img src="images/index/section2-look.jpg" alt="둘러보기" />
 					</div>
-					<a href="location.html" class="intro-tab"><span>둘러보기</span><img src="images/common/dir-dark.svg" alt="이동"></a>
+					<a href="location.html" class="intro-tab"><span>둘러보기</span><img src="images/common/dir-dark.png" alt="이동"></a>
 				</div>
 			</div>
 		</div>
@@ -189,29 +191,29 @@
 				<ul class="rental-slide-nav">
 					<li class="slide-nav__tab current">
 						<span class="nav-tab__icon">
-							<img class="tab-icon__off" src="images/common/icon-surfboard-white.svg" alt="서핑보드">
-							<img class="tab-icon__on" src="images/common/icon-surfboard-dark.svg" alt="서핑보드">
+							<img class="tab-icon__off" src="images/common/icon-surfboard-white.png" alt="서핑보드">
+							<img class="tab-icon__on" src="images/common/icon-surfboard-dark.png" alt="서핑보드">
 						</span>
 						<span class="nav-tab__name">서핑보드</span>
 					</li>
 					<li class="slide-nav__tab">
 						<span class="nav-tab__icon">
-							<img class="tab-icon__off" src="images/common/icon-paddle-white.svg" alt="패들보드">
-							<img class="tab-icon__on" src="images/common/icon-paddle-dark.svg" alt="패들보드">
+							<img class="tab-icon__off" src="images/common/icon-paddle-white.png" alt="패들보드">
+							<img class="tab-icon__on" src="images/common/icon-paddle-dark.png" alt="패들보드">
 						</span>						
 						<span class="nav-tab__name">패들보드</span>
 					</li>
 					<li class="slide-nav__tab">
 						<span class="nav-tab__icon">
-							<img class="tab-icon__off" src="images/common/icon-ski-white.svg" alt="수상스키">
-							<img class="tab-icon__on" src="images/common/icon-ski-dark.svg" alt="수상스키">
+							<img class="tab-icon__off" src="images/common/icon-ski-white.png" alt="수상스키">
+							<img class="tab-icon__on" src="images/common/icon-ski-dark.png" alt="수상스키">
 						</span>
 						<span class="nav-tab__name">수상스키</span>
 					</li>
 					<li class="slide-nav__tab">
 						<span class="nav-tab__icon">
-							<img class="tab-icon__off" src="images/common/icon-safety-white.svg" alt="안전용품">
-							<img class="tab-icon__on" src="images/common/icon-safety-dark.svg" alt="안전용품">
+							<img class="tab-icon__off" src="images/common/icon-safety-white.png" alt="안전용품">
+							<img class="tab-icon__on" src="images/common/icon-safety-dark.png" alt="안전용품">
 						</span>
 						<span class="nav-tab__name">안전용품</span>
 					</li>
