--- a/location.html
+++ b/location.html
@@ -2,17 +2,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+	<meta charset="UTF-8"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>::위치-펭귄서프클럽</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Yujin Hwang" />
 	<meta name="description" content="Study case for my portfolio" />
 	<meta name="Resource-type" content="Document" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<title>::위치-펭귄서프클럽</title>
 	<link rel="stylesheet" type="text/css" href="vendor/stylesheets/reset.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/css/header.css" />
 	<link rel="stylesheet" type="text/css" href="stylesheets/css/location.css" />
 	<link rel="stylesheet" type="text/css" href="stylesheets/css/footer.css" />
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 </head>
 <body>
 	<header class="header">
@@ -23,7 +25,7 @@
 				<li class="gnb-tab"><a href="rent.html"><span>대여</span></a></li>
 			</ul>
 			<div class="wave-tab"><a href="#"><span>속초 파도 LIVE</span>
-				<img src="images/common/dir.svg" alt="속초 파도 LIVE 보러가기">
+				<img src="images/common/dir.png" alt="속초 파도 LIVE 보러가기">
 			</a></div>
 		</nav>
 		<div class="nav-mobile"></div>
@@ -41,7 +43,7 @@
 			<img src="images/location/jumbotron.jpg" alt="대문이미지">
 		</div>
 		<div class="jumbotron-title">
-			<img src="images/common/icon-location-white.svg" alt="아이콘">
+			<img src="images/common/icon-location-white.png" alt="아이콘">
 			<p>펭귄서프클럽 위치안내</p>
 		</div>
 	</section>
@@ -61,19 +63,19 @@
 						<div class="tab-desc__desc">서울역 기준으로 운전시 1시간 20분밖에 안걸리는 곳에 위치해 있습니다. 색다른 취미를 즐기실 수 있는 기회를 놓치지 마세요!</div>
 					</div>
 					<div class="location-tab">
-						<img src="images/common/icon-location-yellow.svg" alt="주소">
+						<img src="images/common/icon-location-yellow.png" alt="주소">
 						<p>강원도 삼척시 우주동 동해안로 34-7</p>
 					</div>
 					<div class="location-tab">
-						<img src="images/common/icon-call.svg" alt="전화">
+						<img src="images/common/icon-call.png" alt="전화">
 						<p>000 - 0000 - 0000</p>
 					</div>
 					<div class="location-tab">
-						<img src="images/common/icon-kakaonav.svg" alt="카카오내비">
+						<img src="images/common/icon-kakaonav.png" alt="카카오내비">
 						<p>카카오 내비게이션으로 연결</p>
 					</div>
 					<div class="location-tab">
-						<img src="images/common/icon-gglmap.svg" alt="구글맵">
+						<img src="images/common/icon-gglmap.png" alt="구글맵">
 						<p>구글맵으로 연결</p>
 					</div>
 				</div>
@@ -169,10 +171,10 @@
 				</div>
 				<div class="gallery-dir">
 					<div class="gallery-dir__tab prev">
-						<img src="images/common/dir-dark.svg" alt="이전">
+						<img src="images/common/dir-dark.png" alt="이전">
 					</div>
 					<div class="gallery-dir__tab next">
-						<img src="images/common/dir-dark.svg" alt="다음">
+						<img src="images/common/dir-dark.png" alt="다음">
 					</div>
 				</div>
 			</div>
