--- a/rent.html
+++ b/rent.html
@@ -2,17 +2,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+	<meta charset="UTF-8"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>::대여-펭귄서프클럽</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Yujin Hwang" />
 	<meta name="description" content="Study case for my portfolio" />
 	<meta name="Resource-type" content="Document" />
+	<meta property="og:title" content="Study Case">
+	<meta property="og:image" content="https://majinmaru.github.io/penguinnsurfclub/images/common/og-img.png"></meter>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<title>::대여-펭귄서프클럽</title>
 	<link rel="stylesheet" type="text/css" href="vendor/stylesheets/reset.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/css/header.css" />
 	<link rel="stylesheet" type="text/css" href="stylesheets/css/rent.css" />
 	<link rel="stylesheet" type="text/css" href="stylesheets/css/footer.css" />
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 </head>
 <body>
 	<header class="header">
@@ -23,7 +27,7 @@
 				<li class="gnb-tab"><a href="rent.html"><span>대여</span></a></li>
 			</ul>
 			<div class="wave-tab"><a href="#"><span>속초 파도 LIVE</span>
-				<img src="images/common/dir.svg" alt="속초 파도 LIVE 보러가기">
+				<img src="images/common/dir.png" alt="속초 파도 LIVE 보러가기">
 			</a></div>
 		</nav>
 		<div class="nav-mobile"></div>
@@ -41,7 +45,7 @@
 			<img src="images/rent/jumbotron.png" alt="대문이미지">
 		</div>
 		<div class="jumbotron-title">
-			<img src="images/common/icon-surfboard-white.svg" alt="아이콘">
+			<img src="images/common/icon-surfboard-white.png" alt="아이콘">
 			<p>장비 및 안전용품 대여</p>
 		</div>
 	</section>
@@ -531,7 +535,7 @@
 			</p>
 		</div>
 		<div class="shopbag-icon">
-			<img src="images/common/icon-shopbag-dark.svg" alt="장바구니 아이콘">
+			<img src="images/common/icon-shopbag-dark.png" alt="장바구니 아이콘">
 		</div>
 	</div>
 	<footer class="footer">
