--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
 	<meta name="Resource-type" content="Document" />
 	<link rel="stylesheet" type="text/css" href="vendor/stylesheets/reset.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/css/header.css" />
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
 <body>
 	<header class="header">
@@ -21,7 +21,7 @@
 				<li class="gnb-tab"><a href="rent.html"><span>대여</span></a></li>
 			</ul>
 			<div class="wave-tab"><a href="#"><span>속초 파도 LIVE</span>
-				<img src="images/common/dir.svg" alt="속초 파도 LIVE 보러가기">
+				<img src="images/common/dir.png" alt="속초 파도 LIVE 보러가기">
 			</a></div>
 		</nav>
 		<div class="nav-mobile"></div>
