--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<meta name="author" content="Yujin Hwang" />
 	<meta name="description" content="Study case for my portfolio" />
 	<meta name="Resource-type" content="Document" />
+	<meta property="og:title" content="펭귄서프클럽">
+	<meta property="og:image" content="https://majinmaru.github.io/penguinnsurfclub/images/common/og-img.png"></meter>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>::PenguinnSurfClub</title>
 	<link rel="stylesheet" type="text/css" href="vendor/stylesheets/reset.css">
@@ -103,6 +105,7 @@
 			</div>
 		</div>
 	</section>
+	<img class="og" src="images/common/og-img.png" alt="og">
 	<section id="start" class="container">
 		<div class="container-title">
 			<span class="title-line"></span>
