--- a/rent.html
+++ b/rent.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="Yujin Hwang" />
 	<meta name="description" content="Study case for my portfolio" />
 	<meta name="Resource-type" content="Document" />
-	<meta property="og:title" content="Study Case">
+	<meta property="og:title" content="대여-펭귄서프클럽">
 	<meta property="og:image" content="https://majinmaru.github.io/penguinnsurfclub/images/common/og-img.png"></meter>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>::대여-펭귄서프클럽</title>
