--- a/class.html
+++ b/class.html
@@ -8,6 +8,8 @@
 	<meta name="author" content="Yujin Hwang" />
 	<meta name="description" content="Study case for my portfolio" />
 	<meta name="Resource-type" content="Document" />
+	<meta property="og:title" content="수업-펭귄서프클럽">
+	<meta property="og:image" content="https://majinmaru.github.io/penguinnsurfclub/images/common/og-img.png"></meter>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>::수업-펭귄서프클럽</title>
 	<link rel="stylesheet" type="text/css" href="vendor/stylesheets/reset.css">
