--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 	</section>
 	<img class="og" src="images/common/og-img.png" alt="og">
 	<section id="start" class="container">
-		<div class="container-title">
+		<div id="class-container-title" class="container-title">
 			<span class="title-line"></span>
 			<p class="title">올 여름 필.수.클래스</p>
 		</div>
@@ -167,7 +167,7 @@
 		</div>
 	</section>
 	<section class="container">
-		<div class="container-title">
+		<div id="rental-container-title" class="container-title">
 			<span class="title-line"></span>
 			<p class="title">대여도 가능합니다</p>
 		</div>
@@ -193,32 +193,32 @@
 				</div>
 				<ul class="rental-slide-nav">
 					<li class="slide-nav__tab current">
-						<span class="nav-tab__icon">
+						<div class="nav-tab__icon">
 							<img class="tab-icon__off" src="images/common/icon-surfboard-white.png" alt="서핑보드">
 							<img class="tab-icon__on" src="images/common/icon-surfboard-dark.png" alt="서핑보드">
-						</span>
-						<span class="nav-tab__name">서핑보드</span>
+						</div>
+						<div class="nav-tab__name">서핑보드</div>
 					</li>
 					<li class="slide-nav__tab">
-						<span class="nav-tab__icon">
+						<div class="nav-tab__icon">
 							<img class="tab-icon__off" src="images/common/icon-paddle-white.png" alt="패들보드">
 							<img class="tab-icon__on" src="images/common/icon-paddle-dark.png" alt="패들보드">
-						</span>						
-						<span class="nav-tab__name">패들보드</span>
+						</div>						
+						<div class="nav-tab__name">패들보드</div>
 					</li>
 					<li class="slide-nav__tab">
-						<span class="nav-tab__icon">
+						<div class="nav-tab__icon">
 							<img class="tab-icon__off" src="images/common/icon-ski-white.png" alt="수상스키">
 							<img class="tab-icon__on" src="images/common/icon-ski-dark.png" alt="수상스키">
-						</span>
-						<span class="nav-tab__name">수상스키</span>
+						</div>
+						<div class="nav-tab__name">수상스키</div>
 					</li>
 					<li class="slide-nav__tab">
-						<span class="nav-tab__icon">
+						<div class="nav-tab__icon">
 							<img class="tab-icon__off" src="images/common/icon-safety-white.png" alt="안전용품">
 							<img class="tab-icon__on" src="images/common/icon-safety-dark.png" alt="안전용품">
-						</span>
-						<span class="nav-tab__name">안전용품</span>
+						</div>
+						<div class="nav-tab__name">안전용품</div>
 					</li>
 				</ul>
 			</div>
