--- a/location.html
+++ b/location.html
@@ -8,6 +8,8 @@
 	<meta name="author" content="Yujin Hwang" />
 	<meta name="description" content="Study case for my portfolio" />
 	<meta name="Resource-type" content="Document" />
+	<meta property="og:title" content="위치-펭귄서프클럽">
+	<meta property="og:image" content="https://majinmaru.github.io/penguinnsurfclub/images/common/og-img.png"></meter>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>::위치-펭귄서프클럽</title>
 	<link rel="stylesheet" type="text/css" href="vendor/stylesheets/reset.css">
@@ -48,7 +50,7 @@
 		</div>
 	</section>
 	<section id="start" class="container">
-		<div class="container-title">
+		<div id="map-container-title" class="container-title">
 			<span class="title-line"></span>
 			<p class="title">서울에서 1시간 20분!</p>
 		</div>
@@ -92,6 +94,7 @@
 				<div class="introduce-part">
 					<div class="introduce-part__img">
 						<img src="images/location/club-01.jpg" alt="외관사진">
+						<span>WELCOME</span>
 					</div>
 					<div class="introduce-part__desc">
 						<div class="desc-bg">
@@ -113,11 +116,13 @@
 					</div>
 					<div class="introduce-part__img">
 						<img src="images/location/club-02.jpg" alt="근처 해수욕장">
+						<span>HAVE FUN</span>
 					</div>
 				</div>
 				<div class="introduce-part">
 					<div class="introduce-part__img">
 						<img src="images/location/club-03.jpg" alt="관광가이드">
+						<span>SUMMER</span>
 					</div>
 					<div class="introduce-part__desc">
 						<div class="desc-bg">
@@ -132,7 +137,7 @@
 		</div>
 	</section>
 	<section class="container">
-		<div class="container-title">
+		<div id="snap-container-title" class="container-title">
 			<span class="title-line"></span>
 			<p class="title">여름, 그 순간들</p>
 			<p class="description">그 때 그 즐거움을 그대로 간직할 수 있도록 스냅촬영과 함께 하세요. 클래스와 함께 예약하시면 저렴한 가격으로 진행가능합니다.</p>
@@ -243,4 +248,5 @@
 	</footer>
 </body>
 <script type="text/javascript" src="javascripts/common.js"></script>
+<script type="text/javascript" src="javascripts/location.js"></script>
 </html>
